# winch_ws

./: check.csv  env.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/potentiometer/: Log.h  SendTime.h  SendTimeRequest.h  SendTimeResponse.h  adder.h  encoder.h
devel/include/sensor/: SendTime.h  SendTimeRequest.h  SendTimeResponse.h  adder.h
devel/include/system_control/: Record.h  Timing.h  adder.h
devel/lib/pkgconfig/: potentiometer.pc  sensor.pc  system_control.pc
devel/lib/python2.7/dist-packages/potentiometer/msg/: _Log.py  __init__.py  _adder.py  _encoder.py
devel/lib/python2.7/dist-packages/potentiometer/srv/: _SendTime.py
devel/lib/python2.7/dist-packages/sensor/msg/: _adder.py
devel/lib/python2.7/dist-packages/sensor/srv/: _SendTime.py  __init__.py
devel/lib/python2.7/dist-packages/system_control/msg/: _Record.py  _Timing.py  __init__.py  _adder.py
devel/lib/sensor/: calculator_winch1  calculator_winch3  measure_encoder_winch3  rotary_encoder_winch1  rotary_encoder_winch3
devel/lib/system_control/: calibrate_1to2  calibrate_1to3  constant_velocity_control  position_control_winch1  position_control_winch3  setup  setup1  setup_winch1  test_kinematics  winch  x_axis_position_control
devel/share/common-lisp/ros/potentiometer/msg/: Log.lisp  _package.lisp  _package_Log.lisp  _package_adder.lisp  _package_encoder.lisp  adder.lisp  encoder.lisp  potentiometer-msg.asd
devel/share/common-lisp/ros/potentiometer/srv/: SendTime.lisp  _package.lisp  _package_SendTime.lisp  potentiometer-srv.asd
devel/share/common-lisp/ros/sensor/msg/: _package.lisp  _package_adder.lisp  _package_encoder.lisp  adder.lisp  sensor-msg.asd
devel/share/common-lisp/ros/sensor/srv/: SendTime.lisp  _package.lisp  _package_SendTime.lisp  sensor-srv.asd
devel/share/common-lisp/ros/system_control/msg/: Record.lisp  Timing.lisp  _package.lisp  _package_Record.lisp  _package_Timing.lisp  _package_adder.lisp  adder.lisp  system_control-msg.asd
devel/share/gennodejs/ros/potentiometer/msg/: Log.js  _index.js  adder.js  encoder.js
devel/share/gennodejs/ros/potentiometer/srv/: SendTime.js  _index.js
devel/share/gennodejs/ros/sensor/msg/: adder.js
devel/share/gennodejs/ros/sensor/srv/: SendTime.js
devel/share/gennodejs/ros/system_control/msg/: Record.js  Timing.js  _index.js  adder.js
devel/share/potentiometer/cmake/: potentiometer-msg-extras.cmake  potentiometer-msg-paths.cmake  potentiometerConfig.cmake
devel/share/roseus/ros/potentiometer/: manifest.l
devel/share/roseus/ros/potentiometer/msg/: Log.l  adder.l  encoder.l
devel/share/roseus/ros/potentiometer/srv/: SendTime.l
devel/share/roseus/ros/sensor/: manifest.l
devel/share/roseus/ros/sensor/msg/: adder.l
devel/share/roseus/ros/sensor/srv/: SendTime.l
devel/share/roseus/ros/system_control/: manifest.l
devel/share/roseus/ros/system_control/msg/: Record.l  Timing.l  adder.l
devel/share/sensor/cmake/: sensor-msg-paths.cmake  sensorConfig.cmake
devel/share/system_control/cmake/: system_control-msg-paths.cmake  system_controlConfig.cmake
src/sensor/: CMakeLists.txt  READ_ME
src/sensor/include/: rotary_encoder.hpp
src/sensor/launch/: sensor_winch3.launch
src/sensor/msg/: adder.msg
src/sensor/scripts/: .angle_pub_winch3.py.swo  .angle_pub_winch3.py.swp  angle_pub_winch1.py  rotary_encoder_pub_winch1.py  sensor_display_winch1.py  sensor_winch1.py
src/sensor/src/: calculator_winch1.cpp  rot_enc_cpp  rotary_encoder.cpp  rotary_encoder.hpp  test_rotary_encoder.cpp
src/system_control/: CMakeLists.txt
src/system_control/include/: computed_torque.hpp  constant_velocity_control.hpp  interpolation_function  interpolation_function.hpp  kinematics.hpp  x_axis_position_control.hpp
src/system_control/msg/: Record.msg  Timing.msg
src/system_control/scripts/: kinematics_test.py  motor_voltage0.py  system_control_winch1.py
src/system_control/src/: ""README""  calibrate_1to2.cpp  calibrate_1to3.cpp  constant_velocity_control.cpp  digital_filter.hpp  digital_to_analog.hpp  interpolation_function.hpp  kinematics.hpp  position_control_winch1.cpp  setup_winch1.cpp  test_kinematics.cpp  winch.cpp  winch.hpp  x_axis_position_control.cpp
